# specfem3d

./: .azure-pipelines.yml  .codecov.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  Carl_Tape_his_comments_on_the_adjoint_tomography_workflow_dec2014.txt  DATA  Daniel_Peter_his_comments_on_the_current_adjoint_tomography_workflow_dec2014.txt  FEATURE_REQUEST  INSTALL  KnownBugs  MESH-default  Makefile  Makefile.in  NOISE_clean_create  PML_init.f90  PyxMPI.c  PyxMPI.pyx  PyxMeshfem.c  PyxMeshfem.pyx  PyxParameters.c  PyxParameters.pyx  PyxSpecfem.c  PyxSpecfem.pyx  README  README.md  README_HOWTO_COUPLING  README_HOWTO_from_Vadim_comment_utiliser_son_nouveau_framework_unifie_d_inversion.txt  README_SPECFEM3D  README_SPECFEM3D_BASIN  README_SPECFEM3D_BASIN_v1.1  README_SPECFEM3D_FAULT  README_do_not_modify_configure_directly_here_is_what_to_do_instead.txt  README_inversion_package_list_of_things_to_do.txt  (+188 more)
ADJOINT_TOMOGRAPHY_TOOLS/measure_adj/UTIL/pssac2/: Makefile.in  README  configure.in  pssac2.c  sacio.c
DATA/: Par_file  (+52 more)
EXTERNAL_PACKAGES_coupled_with_SPECFEM3D/AxiSEM_for_SPECFEM3D/AxiSEM_modif_for_coupling_with_specfem/SOLVER/: CMTSOLUTION.TEMPLATE  CMTSOLUTION_run_asSpec  CMakeLists.txt  Makefile.TEMPLATE  STATIONS_run_asSpec  add_line_number_in_points_lists.sh  analytic_spheroid_mapping.f90  attenuation.f90  background_models.F90  clocks.f90  commpi.F90  commun.F90  coupling_mod.f90  data_io.f90  data_matr.f90  data_source.f90  data_time.f90  def_grid.f90  def_precomp_terms.f90  discr_het.sph  discr_testconst.sph  get_mesh.f90  get_model.F90  global_parameters.f90  inparam_advanced.TEMPLATE  interpolation2.par  kdtree2.f90  lateral_heterogeneities.F90  meshes_io.F90  nc_helpers.F90  nc_routines.F90  nc_snapshots.F90  parameters.F90  pthread.c  reconstruction.par  rotations.f90  runinfo  seismograms.f90  source.f90  stiffness_fluid.f90  (+8 more)
EXTERNAL_PACKAGES_coupled_with_SPECFEM3D/AxiSEM_for_SPECFEM3D/AxiSEM_modif_for_coupling_with_specfem/SOLVER/UTILS/: CMakeLists.txt  Makefile  STATIONS_all_15aug2008_cleaned  axisem_kerner_xdmf.f90  field_transform.F90  find_receiver.F90  make_STATIONS.py  nc_postroutines.F90  plot_allvalence.csh  plot_source_terms.csh  post_processing.F90  taup_tracks.m
meshfem3D/: Makefile.in  check_mesh_quality.f90  compute_parameters.f90  config.h.in  configure  configure.ac  constants.h.in  create_regions_mesh.f90  define_subregions.f90  define_subregions_heuristic.f90  flags.guess  get_global.f90  hex_nodes.f90  meshfem3D.f90  parallel.f90  read_moho_map.f90  read_parameter_file.f90  read_value_parameters.f90  salton_trough_gocad.f90  save_databases.f90  socal_model.f90  store_boundaries.f90
meshfem3D/DATA/: CMTSOLUTION_LQY_HOLLYWOOD  CMTSOLUTION_LQY_YORBA_LINDA  CMTSOLUTION_POLET_YORBA_LINDA  Par_file  Par_file.bak  Par_file.cfg  STATIONS  STATIONS_DAVE_WALD  STATIONS_tsuboi_tokachi-oki
meshfem3D/DATA/hauksson_model/: compute_corners_new_hauksson.f90  filter_white_spaces.f90
meshfem3D/DATA/la_3D_block_harvard/la_3D_high_res/: read_gocad_block_extract_highres.f90
meshfem3D/DATA/la_3D_block_harvard/la_3D_medium_res/: check_block_openDX.f90  gocad_MR_grid_edges.dx  read_gocad_block_extract_mediumres.f90
meshfem3D/DATA/la_basement/: filter_gauss_joe.cpp  read_basement_surface_AVS.f90
meshfem3D/DATA/la_topography/: display_topo_bathy_opendx.f90
meshfem3D/DATA/lin_model/: change_format_hauksson.f90  hauksson_tomo_model.m
meshfem3D/DATA/lin_model/lin_2007/: README  ra_all-1
meshfem3D/DATA/moho_map/: plot_moho_map_gnuplot.f90  plot_moho_map_openDX.f90
utils/EXTERNAL_CODES_coupled_with_SPECFEM3D/AxiSEM_for_SPECFEM3D/AxiSEM_modif_for_coupling_with_specfem/: CMakeLists.txt  HISTORY  MANUAL-README_URL_links.txt  README  copytemplates.sh  make_axisem.macros  make_axisem.macros.TEMPLATE
utils/EXTERNAL_CODES_coupled_with_SPECFEM3D/AxiSEM_for_SPECFEM3D/AxiSEM_modif_for_coupling_with_specfem/MANUAL/: README  automated_testing.tex  manual_axisem1.1.tex  manual_axisem1.2.tex  manual_pyaxi.tex  memory_requirements.txt  pyaxi_input.tex  theoretical_foundations.tex  virtual_box_tutorial.tex
utils/EXTERNAL_CODES_coupled_with_SPECFEM3D/AxiSEM_for_SPECFEM3D/AxiSEM_modif_for_coupling_with_specfem/MESHER/: CMakeLists.txt  Makefile.TEMPLATE  analytic_mapping.f90  analytic_semi_mapping.f90  analytic_spheroid_mapping.f90  background_models.F90  background_models.f90  clocks.f90  clocks_wrapper_mesher.f90  data_bkgrdmodel.f90  data_coarse.f90  data_diag.f90  data_gllmesh.f90  data_grid.f90  data_mesh.f90  data_numbering.f90  data_pdb.f90  data_spec.f90  data_time.f90  discont_meshing.f90  gllmeshgen.f90  global_parameters.f90  homomodel.bm  inparam_mesh  inparam_mesh.TEMPLATE  input.f90  interpolation.f90  main.f90  makemake.pl  mapping_spheroid.f90  mesh_info.f90  meshgen.f90  model_discontinuities.f90  movemesh.csh  mysubmit_jade.csh  mysubmit_licallo.sh  mysubmit_occigen.sh  numbering.f90  parallelization.f90  pdb.f90  (+7 more)
utils/EXTERNAL_CODES_coupled_with_SPECFEM3D/AxiSEM_for_SPECFEM3D/AxiSEM_modif_for_coupling_with_specfem/SOLVER/: Makefile  Makefile.TEMPLATE  README_VADIM  add_line_number_in_points_lists.sh  analytic_mapping.f90  analytic_semi_mapping.f90  analytic_spheroid_mapping.f90  apply_masks.f90  attenuation.f90  background_models.F90  background_models.f90  clocks.f90  clocks_wrapper_solver.f90  commpi.F90  commun.F90  coupling_mod.f90  data_comm.f90  data_heterogeneous.f90  data_io.f90  data_matr.f90  data_mesh.f90  data_pointwise.f90  data_proc.f90  data_source.f90  data_spec.f90  data_time.f90  def_grid.f90  def_precomp_terms.f90  discr_het_shifted.sph  expand_2D_3D.par  ftz.c  geom_transf.f90  get_mesh.f90  get_model.F90  global_parameters.f90  inparam_advanced  inparam_advanced.TEMPLATE  inparam_basic  inparam_basic.TEMPLATE  (+58 more)
utils/bathy_sep_to_ascii/: CMakeLists.txt  Makefile  README
utils/bathy_sep_to_ascii/inc/: check_errors.h  convert_topo.h  parse_sep.h  sep_header.h
utils/bathy_sep_to_ascii/src/: convert_topo.c  create_ascii_bathy_from_sep_vs.c  parse_sep.c
(+8613 files in other folders)
